--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger mt-2">0</span>
                     </button>
                     <div class="shopping-cart-list bg-primary d-none">
-                        <b class="fs-5 text-white my-3">Shoppping Card</b>
+                        <b class="fs-5 text-white my-3">Shoppping Cart</b>
 
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content</p>
                             <div class="d-flex justify-content-between">
-                                <a class="btn btn-info text-white" href="#">Add to card</a>
+                                <a class="btn btn-info text-white" href="#">Add to cart</a>
                                 <span class="price badge rounded-pill bg-warning text-dark d-flex align-items-center">$
                                     66</span>
                             </div>
@@ -73,7 +73,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content</p>
                             <div class="d-flex justify-content-between">
-                                <a class="btn btn-info text-white" href="#">Add to card</a>
+                                <a class="btn btn-info text-white" href="#">Add to cart</a>
                                 <span class="price badge rounded-pill bg-warning text-dark d-flex align-items-center">$
                                     80</span>
                             </div>
@@ -88,7 +88,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content</p>
                             <div class="d-flex justify-content-between">
-                                <a class="btn btn-info text-white" href="#">Add to card</a>
+                                <a class="btn btn-info text-white" href="#">Add to cart</a>
                                 <span class="price badge rounded-pill bg-warning text-dark d-flex align-items-center">$
                                     75</span>
                             </div>
@@ -103,7 +103,7 @@
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
                                 of the card's content</p>
                             <div class="d-flex justify-content-between">
-                                <a class="btn btn-info text-white" href="#">Add to card</a>
+                                <a class="btn btn-info text-white" href="#">Add to cart</a>
                                 <span class="price badge rounded-pill bg-warning text-dark d-flex align-items-center">$
                                     35</span>
                             </div>
